// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/LONG.proto";
import "./StatisticValueStruct.proto";


package ccsds_mc.protobuf;

message StatisticFunctionValue {
extensions 3 to 103;

  optional ccsds_mal.protobuf.LONG function = 1;
  repeated ccsds_mc.protobuf.StatisticValueStruct value = 2;
}
