// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/ATTRIBUTE.proto";
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";


package ccsds_mc.protobuf;

message StatisticValueStruct {
extensions 7 to 107;

  optional ccsds_mal.protobuf.TIME startTime = 1;
  optional ccsds_mal.protobuf.TIME endTime = 2;
  optional ccsds_mal.protobuf.TIME valueTime = 3;
  optional ccsds_mal.protobuf.ATTRIBUTE value = 4;
  optional ccsds_mal.protobuf.UINTEGER sampleCount = 5;
  optional ccsds_mal.protobuf.TIME timestamp = 6;
}
