// Produced by Acceleo Cpp Generator 1.1.0-R7S1-20151214

import "ccsds_mal/types.proto";

package ccsds_mc.protobuf;

message StatisticFunctionDetailsStruct {
extensions 4 to 104;

  optional ccsds_mal.protobuf.IDENTIFIER name = 1;
  optional ccsds_mal.protobuf.STRING description = 2;
  optional ccsds_mal.protobuf.TIME timestamp = 3;
}
